systeemtester/templates/activemq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: activemq
  name: activemq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: activemq
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/devhome-default: "true"
        io.kompose.service: activemq
    spec:
      containers:
        - image: symptoma/activemq:latest
          name: activemq
          ports:
            - containerPort: 61616
            - containerPort: 8161
          resources: {}
          volumeMounts:
            - mountPath: /data/activemq
              name: activemq-claim0
            - mountPath: /var/log/activemqnetworks
              name: activemq-claim1
      restartPolicy: Always
      volumes:
        - name: activemq-claim0
          hostPath:
            path: /run/desktop/mnt/host/g/data/var/activemq/data
            type: Directory
        - name: activemq-claim1
          hostPath:
            path: /run/desktop/mnt/host/g/data/var/activemq/log
            type: Directory
