systeemtester/templates/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - env:
            - name: MINIO_ROOT_USER
              value: "admin"
            - name: MINIO_ROOT_PASSWORD
              value: "admin123"
            - name: MINIO_DEFAULT_BUCKETS
              value: "pdok"
          name: minio
          image: minio/minio
          command:
            - /bin/bash
            - -c
          args:
            - minio server /data --console-address :9001
          ports:
            - containerPort: 9000
            - containerPort: 9001
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /data
              name: minio-storage
      restartPolicy: Always
      volumes:
        - name: minio-storage
          hostPath:
            path: /run/desktop/mnt/host/g/data/minios3
            type: Directory
