systeemtester/templates/activemq-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: activemq
  name: activemq
spec:
  ports:
    - name: "61616"
      port: 61616
      targetPort: 61616
    - name: "8161"
      port: 8161
      targetPort: 8161
  selector:
    io.kompose.service: activemq
