systeemtester/templates/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  ports:
    - name: "minio-1"
      port: 9000
      targetPort: 9000
    - name: "minio-2"
      port: 9001
      targetPort: 9001
  selector:
    app: minio
  type: LoadBalancer
