systeemtester/templates/mysql-for-kingcomments-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mysqldb
  name: mysqldb
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: mysqldb
  type: LoadBalancer
