systeemtester/templates/postgis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: postgresdb
  name: postgresdb
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: postgresdb
  type: LoadBalancer
