systeemtester/templates/postgresdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: K:\A__IntelliJ_projects\sb2-demo\docker-to-kubernetes\kompose-windows-amd64.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresdb
  name: postgresdb
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: postgresdb
  type: LoadBalancer
