systeemtester/templates/webdav-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdav
  labels:
    app: webdav
spec:
  ports:
    - name: "webdav-port"
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: webdav
  type: LoadBalancer
